--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_event_view">EventView</string>
     <string name="eventDescription">Test me sucka!</string>
+
+
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
+    <string name="title_activity_main">MainActivity</string>
+
+
 </resources>
