--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="title_activity_main">MainActivity</string>
 
 
-    <string name="title_activity_ignore_list">IgnoreList</string>
+    <string name="title_activity_ignore_list">IgnoreList!</string>
 </resources>
